<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings related to Application Information -->
    <string name="app_name">Visa Sample Application</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- String related to menu -->
    <string name="dev_info">Developer Information</string>

    <!-- Strings related to Enter Card Information page -->
    <string name="card_number">Card Number</string>
    <string name="expiration_date">MM/YY</string>
    <string name="CVV2">CVV2</string>
    <string name="zip_code">ZIP</string>
    <string name="submit_button_text">Submit</string>

    <!-- Strings related to Swipe Card Page -->
    <string name="sim_instructions">Please swipe card</string>
    <string name="charge_card">Charge Credit Card</string>
    <string name="sim_card">Simulate Credit Card</string>
    <string name="swipe_card_alert">Please swipe your credit card</string>
    <string name="swipe_card_alert_message">Processing credit card information&#8230;</string>
    <string name="completed_transaction">Your transaction has been processed</string>
    <string name="cancel">Cancel</string>
    <string name="error_invalid_card_number">This card number is invalid</string>
    <string name="error_invalid_expdate">This expiration is invalid</string>
    <string name="error_invalid_cvv2">This cvv2 is invalid</string>
    <string name="error_invalid_zipcode">This zipcode is invalid</string>
    <string name="cvv2_info_message">The security code (CVV2) is a unique three or four digit number located on the back of a credit card</string>
    <string name="cvv2_info_title">What is a CVV2?</string>
    
    <!-- Strings related to Charge/ Swipe Options Menu -->
    <string name="swipe_card_menu_text">Swipe Card</string>
    <string name="enter_card_menu_text">Enter Card Information</string>
    
    <!-- Strings related to Developer information -->
    <string name="dev_info_message">This application utilizes the Authorize.Net SDK
         available on GitHub under the username AuthorizeNet. Authorize.Net is a
          wholly owned subsidiary of Visa.</string>
    <string name="dev_info_title">Developer Information</string>

    <!-- Strings related to Login -->
    <string name="prompt_loginID">Login ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="login_progress_signing_in">Logging In&#8230;</string>
    <string name="error_invalid_loginID">This login ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="visa_logo">Visa Logo</string>
    <string name="title_activity_login">Sign In</string>
    <string name="error_network">Unable to complete request. No internet connection.</string>

    <!-- Strings related to Logout -->
    <string name="action_log_out">Log Out</string>
    <string name="title_item_list">Items</string>
    <string name="title_activity_charge_card">Charge Credit Card</string>
    <string name="action_settings">Settings</string>
    
    <!-- Extra strings to be removed later -->
    <string name="test_username">mobilecp1</string>
    <string name="test_password">CPMobile2</string>

</resources>
