<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.visa.visasampleapplication.ChargeCardActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="50dp" >

        <EditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/card_number"
            android:maxLength="16"
            android:inputType="number">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/card_number"
            android:gravity="center"
            android:hint="@string/expiration_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/CVV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_number"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/expiration_date"
            android:gravity="center"
            android:hint="@string/CVV2"
            android:inputType="number" />

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/card_number"
            android:layout_toRightOf="@id/CVV2"
            android:gravity="center"
            android:hint="@string/zip_code"
            android:inputType="number" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:background="?android:attr/dividerVertical" />

            <View
                android:id="@+id/view_charge_card"
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/swipe_card_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/view_charge_card"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/swipe_card_menu_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/view_charge_card"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/submit_button_text"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>