<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    tools:context="com.visa.visasampleapplication.LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:adjustViewBounds="true"
                android:contentDescription="@string/visa_logo"
                android:scaleType="fitXY"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/visa_logo" />

            <EditText
                android:id="@+id/loginID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_loginID"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Arial"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingTop="12dp" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="4dip"
                    android:layout_marginRight="4dip"
                    android:background="?android:attr/dividerHorizontal" />

                <Button
                    android:id="@+id/log_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="@string/action_log_in" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</merge>
